WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/Asset_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Asset Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>