WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Account_Asset__c.field-meta.xml
<CustomField>
    <fullName>Account_Asset__c</fullName>
    <label>Account Asset</label>
    <referenceTo>Account_Asset__c</referenceTo>
    <relationshipLabel>Asset Line Items</relationshipLabel>
    <relationshipName>Asset_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>