WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Actual_Monthly_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Rebate__c</fullName>
    <label>Actual Monthly Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>