WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Actual_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Revenue__c</fullName>
    <description>CP Actual Monthly Revenue</description>
    <label>Actual Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>