WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/ATM_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>ATM_Transaction_Fee__c</fullName>
    <label>ATM Transaction Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>