WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Card_issue_fee__c.field-meta.xml
<CustomField>
    <fullName>Card_issue_fee__c</fullName>
    <label>Card issue fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>