WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Client_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>