WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>