WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Fees_per_Txn_POS__c.field-meta.xml
<CustomField>
    <fullName>Fees_per_Txn_POS__c</fullName>
    <label>Fees per Txn POS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>