WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/FX_on_Spend_Fee__c.field-meta.xml
<CustomField>
    <fullName>FX_on_Spend_Fee__c</fullName>
    <label>FX on Spend Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>