WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Implementation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee__c</fullName>
    <label>Implementation Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>