WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Implementation_Project__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CorporatePay Link Asset Line Items with Implementation Projects</description>
    <label>Implementation Project</label>
    <referenceTo>Implementation_Project__c</referenceTo>
    <relationshipLabel>Asset Line Items</relationshipLabel>
    <relationshipName>Asset_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>