WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Monthly_Actual_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Actual_Rebate__c</fullName>
    <label>Monthly Actual Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>