WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Monthly_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Card_Fee__c</fullName>
    <label>Monthly Card Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>