WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue__c</fullName>
    <label>Monthly Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>