WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Asset Line Items</relationshipLabel>
    <relationshipName>Asset_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>