WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>Rebate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>