WexGit/Wex_DX/force-app/main/default/objects/Asset_Line_Item__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <label>Settlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>